# Qiskit_QML_Implementations

./: .gitignore  QML_real_dataset.ipynb  README.md  aus_weather_best.ipynb  generic_comparator.ipynb  heart_failure_best.ipynb  heart_failure_best_all.ipynb  heart_failure_implementation.ipynb  pyproject.toml  requirements.txt  stroke_best.ipynb
Qiskit textbook main notebooks-quantum-machine-learning/: pqc.ipynb  training.ipynb
Qiskit-textbook-main-notebooks-quantum-machine-learning/: encoding.ipynb  supervised.ipynb  training.ipynb
datasets/: README.md
docs/tutorials/: 01_neural_networks.ipynb
