[tool.poetry]
name = "diploma"
version = "0.1.0"
description = "version control for requiremnet"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
matplotlib="3.9.0"
pylatexenc="2.10"
qiskit="1.4.1"
qiskit-aer="0.14.1"
qiskit-ibm-provider="0.11.0"
qiskit-ibm-runtime="0.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
